# netspeed_gui

./: .gitignore  tsconfig.json
src/: index.html  main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
